# python-templer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
example/: context.yml  template.j2
examples/1/: rendered.ini  template.ini.j2
examples/2/: context.yml
examples/2/rendered/dir1/: letter.txt
examples/2/rendered/dir2/: number.txt
examples/2/templates/dir1/: letter.txt.j2
examples/2/templates/dir2/: number.txt.j2
examples/3/: context.yml  rendered.ini  template.ini.j2
examples/4/rendered/etc/nginx/: nginx.conf
examples/4/rendered/etc/nginx/conf.d/: phpmyadmin.conf
examples/4/rendered/etc/php/7.0/: php.ini
examples/4/templates/etc/nginx/: nginx.conf.j2
examples/4/templates/etc/nginx/conf.d/: phpmyadmin.conf.j2
examples/4/templates/etc/php/7.0/: php.ini.j2
examples/4/vars/: 10-nginx.yml  20-php.yml  30-phpMyAdmin.yml
examples/5/: context.yml  template.ini.j2
src/templer/: __init__.py  __main__.py  cli.py  context.py  contextfile.py  exceptions.py  filters.py  jinja_filter.py  templatefile.py
templer/: __init__.py  cli.py  jinja_filter.py
